# cs-100-lab-4

./: CMake  CMake.txt  CMakeLists.txt  Makefile
.github/workflows/: main.yml
header/: rectangle.hpp
src/: main.cpp  rectangle.cpp
tests/: test.cpp
